# rpo

./: GIT_STATUS_AND_HOW_TO_FIX.md
fclient/: settings.gradle
fclient/app/: build.gradle
fclient/app/src/main/: AndroidManifest.xml
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/app/src/main/java/ru/iu3/fclient/: MainActivity.java  PinpadActivity.java  TransactionEvents.java
fclient/app/src/main/java/ru/iu3/fclient/ui/theme/: Color.kt  Theme.kt  Type.kt
fclient/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
fclient/app/src/main/res/values/: strings.xml  themes.xml
fclient/gradle/: libs.versions.toml
fclient/gradle/wrapper/: gradle-wrapper.properties
